vlib/v/parser/tests/fn_param_name_cap.vv
type Type = int

fn f(Type)

fn g[T](T v) {
}

g(5)
